fixed weird scrollbar on landing page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -159,4 +159,7 @@ nav.nav-center ul {
   background: rgba(0,0,0,0.8);
   height: 100%;
   width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
